--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="menu.css" />
     <title>SCOM</title>
   </head>
   <body>
     <header>
       <h1>Lorem Ipsum</h1>
     </header>
-
     <div class="menu">
       <div class="item">
         <h1>Menu Item</h1>
+        <div class="dropdown">
+          <a href="#">SubItem</a>
+          <a href="#">SubItem</a>
+          <a href="#">SubItem</a>
+        </div>
       </div>
       <div class="item">
         <h1>Menu Item</h1>
       </div>
       <div class="item">
         <h1>Menu Item</h1>
+        <div class="dropdown">
+          <a href="#">SubItem</a>
+          <a href="#">SubItem</a>
+          <a href="#">SubItem</a>
+        </div>
       </div>
       <div class="item">
         <h1>Menu Item</h1>
@@ -72,7 +82,7 @@
       </div>
     </div>
     <footer>
-      <h4>Camila, Daniel, Guilherme e Vinicius &copy</h4>
+      <h4>&copy Camila, Daniel, Guilherme e Vinicius</h4>
     </footer>
   </body>
 </html>
