--- a/index.html
+++ b/index.html
@@ -1,88 +1,91 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="menu.css" />
-    <title>SCOM</title>
-  </head>
-  <body>
-    <header>
-      <h1>Lorem Ipsum</h1>
-    </header>
-    <div class="menu">
-      <div class="item">
-        <h1>Menu Item</h1>
-        <div class="dropdown">
-          <a href="#">SubItem</a>
-          <a href="#">SubItem</a>
-          <a href="#">SubItem</a>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="menu.css" />
+        <title>SCOM</title>
+    </head>
+    <body>
+        <header>
+            <h1>Lorem Ipsum</h1>
+        </header>
+        <div class="menu">
+            <div class="item-dropdown">
+                <h1 class=large_sb>MENU 1</h1>
+                <h1 class="small_sb">1</h1>
+                <div class="dropdown">
+                    <a href="#">SubItem</a>
+                    <a href="#">SubItem</a>
+                    <a href="#">SubItem</a>
+                </div>
+            </div>
+            <div class="item">
+                <h1 class=large_sb>MENU 2</h1>
+                <h1 class="small_sb">2</h1>
+            </div>
+            <div class="item-dropdown">
+                <h1 class=large_sb>MENU 3</h1>
+                <h1 class="small_sb">3</h1>
+                <div class="dropdown">
+                    <a href="#">SubItem</a>
+                    <a href="#">SubItem</a>
+                    <a href="#">SubItem</a>
+                </div>
+            </div>
+            <div class="item">
+                <h1 class=large_sb>MENU 4</h1>
+                <h1 class="small_sb">4</h1>
+            </div>
         </div>
-      </div>
-      <div class="item">
-        <h1>Menu Item</h1>
-      </div>
-      <div class="item">
-        <h1>Menu Item</h1>
-        <div class="dropdown">
-          <a href="#">SubItem</a>
-          <a href="#">SubItem</a>
-          <a href="#">SubItem</a>
+        <div class="content">
+            <div class="main">
+                <h1>Artigo Principal</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis cum
+                    beatae consequuntur ex culpa aliquid maiores facere, eveniet
+                    provident, voluptates molestias odio id optio accusantium sed quae rem
+                    vitae deleniti!
+                </p>
+            </div>
+            <div class="others">
+                <div class="article">
+                    <h2>Título</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id,
+                        molestiae?
+                    </p>
+                    <a href="#">Leia Mais</a>
+                </div>
+                <div class="article">
+                    <h2>Título</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id,
+                        molestiae?
+                    </p>
+                    <a href="#">Leia Mais</a>
+                </div>
+                <div class="article">
+                    <h2>Título</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id,
+                        molestiae?
+                    </p>
+                    <a href="#">Leia Mais</a>
+                </div>
+                <div class="article">
+                    <h2>Título</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id,
+                        molestiae?
+                    </p>
+                    <a href="#">Leia Mais</a>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="item">
-        <h1>Menu Item</h1>
-      </div>
-    </div>
-
-    <div class="content">
-      <div class="main">
-        <h1>Artigo Principal</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis cum
-          beatae consequuntur ex culpa aliquid maiores facere, eveniet
-          provident, voluptates molestias odio id optio accusantium sed quae rem
-          vitae deleniti!
-        </p>
-      </div>
-      <div class="others">
-        <div class="article">
-          <h2>Título</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id,
-            molestiae?
-          </p>
-          <a href="#">Leia Mais</a>
-        </div>
-        <div class="article">
-          <h2>Título</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id,
-            molestiae?
-          </p>
-          <a href="#">Leia Mais</a>
-        </div>
-        <div class="article">
-          <h2>Título</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id,
-            molestiae?
-          </p>
-          <a href="#">Leia Mais</a>
-        </div>
-        <div class="article">
-          <h2>Título</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id,
-            molestiae?
-          </p>
-          <a href="#">Leia Mais</a>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <h4>&copy Camila, Daniel, Guilherme e Vinicius</h4>
-    </footer>
-  </body>
+        <footer>
+            <h4>&copy Camila, Daniel, Guilherme e Vinicius</h4>
+        </footer>
+    </body>
 </html>
